cabal-version:      2.2
name:               lsp
version:            2.7.0.0
synopsis:           Haskell library for the Microsoft Language Server Protocol
description:
  An implementation of the types, and basic message server to
  allow language implementors to support the Language Server
  Protocol for their specific language.
  .
  An example of this is for Haskell via the Haskell Language
  Server, at https://github.com/haskell/haskell-language-server

homepage:           https://github.com/haskell/lsp
license:            MIT
license-file:       LICENSE
author:             Alan Zimmerman
maintainer:         alan.zimm@gmail.com
copyright:          Alan Zimmerman, 2016-2021
category:           Development
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell/lsp

common lsp-common
  default-language:   GHC2021
  -- Various things we want on by default
  -- * syntactic niceties, QOL
  -- * we always want more deriving options
  -- * we want all data strict by default
  -- * we have lots of duplicte record fields
  -- * extended type class stuff particularly for the
  --   lens classes
  -- * fancy types for singletons etc.
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    LambdaCase
    NegativeLiterals
    OverloadedStrings
    OverloadedLabels
    OverloadedRecordDot
    RoleAnnotations
    StrictData
    TypeFamilies
    UndecidableInstances
  ghc-options:
    -Wall -Wunused-packages -Wno-unticked-promoted-constructors
    -Wmissing-deriving-strategies

library
  import: lsp-common
  hs-source-dirs:     src
  ghc-options:        -fprint-explicit-kinds
  reexported-modules:
    , Language.LSP.Protocol.Types
    , Language.LSP.Protocol.Lens
    , Language.LSP.Protocol.Capabilities
    , Language.LSP.Protocol.Message
    , JSONRPC.Typed.Server
    , JSONRPC.Typed.Method
    , JSONRPC.Typed.RPC
    , JSONRPC.Typed.Message
    , JSONRPC.Id
    , JSONRPC.Message
    , JSONRPC.RPC
    , JSONRPC.Method
    , JSONRPC.Server

  exposed-modules:
    Language.LSP.Diagnostics
    Language.LSP.Logging
    Language.LSP.Server
    Language.LSP.VFS
    Language.LSP.Server.Core
    Language.LSP.Server.Config
    Language.LSP.Server.Shutdown
    Language.LSP.Server.Progress
    Language.LSP.Server.DynamicRegistration
    Language.LSP.Server.WorkspaceFolders
    Language.LSP.MethodInstance

  build-depends:
    , aeson                 >=2      && <2.3
    , async                 ^>=2.2
    , attoparsec            ^>=0.14
    , base                  >=4.11   && <5
    , bytestring            >=0.10   && <0.13
    , co-log-core           ^>=0.3
    , containers            >=0.6 && < 0.8
    , data-default          ^>=0.7
    , directory             ^>=1.3
    , exceptions            ^>=0.10
    , extra                 ^>=1.7
    , filepath              >=1.4 && < 1.6
    , generic-lens
    , hashable              ^>=1.4
    , jsonrpc-typed
    , lens                  >=5.1    && <5.4
    , lens-aeson            ^>=1.2
    , lsp-types             ^>=2.3
    , mtl                   >=2.2    && <2.4
    , prettyprinter         ^>=1.7
    , singletons
    , sorted-list           ^>=0.2.1
    , stm                   ^>=2.5
    , some
    , temporary
    , text                  >=1      && <2.2
    , text-rope             ^>=0.2
    , transformers          >=0.5    && <0.7
    , unliftio              ^>=0.2
    , unliftio-core         ^>=0.2
    , unordered-containers  ^>=0.2

library jsonrpc-typed
  import: lsp-common
  hs-source-dirs:     jsonrpc-typed

  exposed-modules:
    JSONRPC.Typed.Server
    JSONRPC.Typed.RPC
    JSONRPC.Typed.Message
    JSONRPC.Typed.Method

    JSONRPC.Id
    JSONRPC.Message
    JSONRPC.IO
    JSONRPC.RPC
    JSONRPC.Method
    JSONRPC.Server

  other-modules:
    JSONRPC.Server.Core
    JSONRPC.Server.Control
    JSONRPC.Server.Dispatch
    JSONRPC.Utils

  build-depends:
    , aeson                 >=1.0.0.0
    , attoparsec
    , async
    , base                  >=4.11    && <5
    , bytestring
    , co-log-core           >=0.3.1.0
    , containers
    , exceptions
    , generic-lens
    , hashable
    , lens-aeson
    , lens                  >=4.15.2
    , lsp-types             ^>=2.3
    , mtl                   <2.4
    , prettyprinter
    , singletons
    , template-haskell
    , th-abstraction
    , stm                   ^>=2.5
    , some
    , text
    , unliftio-core         >=0.2.0.0

test-suite jsonrpc-typed-test
  import:             lsp-common
  type:               exitcode-stdio-1.0
  hs-source-dirs:     jsonrpc-typed-test
  main-is:            Driver.hs
  other-modules:
    Json
    Server
    TestLib

  build-depends:
    , base
    , async
    , bytestring
    , dependent-sum-template
    , co-log-core
    , aeson
    , jsonrpc-typed
    , containers
    , generic-lens
    , lens
    , lsp-types
    , concurrent-output
    , singletons
    , singletons-th
    , some
    , stm
    , prettyprinter
    , QuickCheck
    , tasty
    , tasty-golden
    , tasty-quickcheck
    , tasty-hunit
    , text

  build-tool-depends: tasty-discover:tasty-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N

executable lsp-demo-reactor-server
  import: lsp-common
  main-is:            Reactor.hs
  hs-source-dirs:     example
  build-depends:
    , aeson
    , base
    , co-log-core
    , lens
    , lsp
    , prettyprinter
    , stm
    , text

  -- the package library. Comment this out if you want repl changes to propagate
  if !flag(demo)
    buildable: False

executable lsp-demo-simple-server
  import:             lsp-common
  main-is:            Simple.hs
  hs-source-dirs:     example
  build-depends:
    , base
    , lsp
    , text

  -- the package library. Comment this out if you want repl changes to propagate
  if !flag(demo)
    buildable: False

flag demo
  description: Build the demo executables
  default:     False

test-suite lsp-test
  import:             lsp-common
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    DiagnosticsSpec
    Spec
    VfsSpec

  build-depends:
    , base
    , containers
    , hspec
    , lsp
    , sorted-list
    , text
    , text-rope
    , unordered-containers

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
