cabal-version:      2.2
name:               lsp
version:            2.4.0.0
synopsis:           Haskell library for the Microsoft Language Server Protocol
description:
  An implementation of the types, and basic message server to
  allow language implementors to support the Language Server
  Protocol for their specific language.
  .
  An example of this is for Haskell via the Haskell Language
  Server, at https://github.com/haskell/haskell-language-server

homepage:           https://github.com/haskell/lsp
license:            MIT
license-file:       LICENSE
author:             Alan Zimmerman
maintainer:         alan.zimm@gmail.com
copyright:          Alan Zimmerman, 2016-2021
category:           Development
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell/lsp

library
  hs-source-dirs:     src
  default-language:   GHC2021
  ghc-options:        -Wall -fprint-explicit-kinds
  reexported-modules:
    , Language.LSP.Protocol.Types
    , Language.LSP.Protocol.Lens
    , Language.LSP.Protocol.Capabilities
    , Language.LSP.Protocol.Message

  exposed-modules:
    Language.LSP.Diagnostics
    Language.LSP.Logging
    Language.LSP.Server
    Language.LSP.VFS

  other-modules:
    Language.LSP.Server.Control
    Language.LSP.Server.Core
    Language.LSP.Server.Processing

  ghc-options:        -Wall
  build-depends:
    , aeson                 >=2      && <2.3
    , async                 ^>=2.2
    , attoparsec            ^>=0.14
    , base                  >=4.11   && <5
    , bytestring            >=0.10   && <0.13
    , co-log-core           ^>=0.3
    , containers            ^>=0.6
    , data-default          ^>=0.7
    , directory             ^>=1.3
    , exceptions            ^>=0.10
    , filepath              >=1.4 && < 1.6
    , hashable              ^>=1.4
    , lens                  >=5.1    && <5.3
    , lens-aeson            ^>=1.2
    , lsp-types             ^>=2.1
    , mtl                   >=2.2    && <2.4
    , prettyprinter         ^>=1.7
    , random                ^>=1.2
    , row-types             ^>=1.0
    , sorted-list           ^>=0.2.1
    , stm                   ^>=2.5
    , text                  >=1      && <2.2
    , text-rope             ^>=0.2
    , transformers          >=0.5    && <0.7
    , unliftio-core         ^>=0.2
    , unordered-containers  ^>=0.2
    , uuid                  >=1.3

executable lsp-demo-reactor-server
  main-is:            Reactor.hs
  hs-source-dirs:     example
  default-language:   GHC2021
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  build-depends:
    , aeson
    , base
    , co-log-core
    , lens
    , lsp
    , prettyprinter
    , stm
    , text

  -- the package library. Comment this out if you want repl changes to propagate
  if !flag(demo)
    buildable: False

executable lsp-demo-simple-server
  main-is:            Simple.hs
  hs-source-dirs:     example
  default-language:   GHC2021
  ghc-options:        -Wall -Wno-unticked-promoted-constructors
  build-depends:
    , base
    , lsp
    , text

  -- the package library. Comment this out if you want repl changes to propagate
  if !flag(demo)
    buildable: False

flag demo
  description: Build the demo executables
  default:     False

test-suite lsp-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:
    DiagnosticsSpec
    Spec
    VspSpec

  build-depends:
    , base
    , containers
    , hspec
    , lsp
    , row-types
    , sorted-list
    , text
    , text-rope
    , unordered-containers

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:   GHC2021
